--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <title>Haruki Home</title>
     <link rel="stylesheet" type="text/css" href="assets/css/vno.css">
     <link rel="stylesheet" type="text/css" href="assets/css/iconfont.css">
-    <link rel="apple-touch-icon" href="./apple-touch-icon.png">
-    <link rel="icon" href="./favicon.ico">
+    <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/haruki959/home/apple-touch-icon.png">
+    <link rel="icon" href="https://cdn.jsdelivr.net/gh/haruki959/home/favicon.ico">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
                 <div class="panel-main__content">
                     <div class="ih-item circle effect right_to_left">            
                         <a href="#" title="" class="blog-button">
-                            <div class="img"><img src="img/logo.jpg" alt="img" class="js-avatar iUp profilepic"></div>
+                            <div class="img"><img src="https://cdn.jsdelivr.net/gh/haruki959/home/img/logo.jpg" alt="img" class="js-avatar iUp profilepic"></div>
                             <div class="info iUp">
                                 <div class="info-back">
                                     <h2> 
@@ -149,9 +149,9 @@
             }
         }
     </style>
-    <script type="text/javascript" src="assets/js/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/js/fetch.min.js"></script>
-    <script type="text/javascript" src="assets/js/main.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/haruki959/home/assets/js/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/haruki959/home/assets/js/fetch.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/haruki959/home/assets/js/main.js"></script>
 </body>
 
 </html>
