--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
 									  <li class="navigation__item">
                                         <a href="https://haruki959.lofter.com/" class="blog-button" target="_self">短文时间线</a>
                                     </li>
-									
+					</li>
+									  <li class="navigation__item">
+                                        <a href="https://tools.nyanyanya.top/" class="blog-button" target="_self">插件工具箱</a>
+                                    </li>				
                                 </ul>
                             </nav>
                         </div>
