--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                     </li>
 					</li>
 									  <li class="navigation__item">
-                                        <a href="https://tools.nyanyanya.top/" class="blog-button" target="_self">插件工具箱</a>
+                                        <a href="https://tools.xn--rhq388ct6kcjm.com/" class="blog-button" target="_self">插件工具箱</a>
                                     </li>				
                                 </ul>
                             </nav>
