--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
                                             <span class="label">CSDN</span>
                                         </a>
                                     </li>
+					 <li class="navigation__item">
+                                        <a href="https://mubu.com/doc/3oltTTcBSdi" title="文档" target="_blank">
+                                            <i class="social iconfont icon-cnblogs"></i>
+                                            <span class="label">文档</span>
+                                        </a>
+                                    </li>
+					
                                     <li class="navigation__item">
                                         <a href="mailto:haruki959@qq.com" title="Email">
                                             <i class="social iconfont icon-email"></i>
