--- a/index.html
+++ b/index.html
@@ -62,15 +62,11 @@
                                         <a href="/" class="blog-button">首页</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://xn--rhq388ct6kcjm.com/" class="blog-button" target="_self">博客</a>
+                                        <a href="https://newreport.top" class="blog-button" target="_self">博客</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://www.yuque.com/creater" class="blog-button" target="_self">长篇知识集</a>
-                                    </li>
-									  <li class="navigation__item">
-                                        <a href="https://newreport.lofter.com/" class="blog-button" target="_self">短文时间线</a>
-                                    </li>
-									
+                                        <a href="https://www.yuque.com/newreport" class="blog-button" target="_self">语雀</a>
+                                    </li>			
                                 </ul>
                             </nav>
                         </div>
