--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                         </a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="mailto:xjy.work@qq.com" title="Email">
+                                        <a href="mailto:haruki959@qq.com" title="Email">
                                             <i class="social iconfont icon-email"></i>
                                             <span class="label">Email</span>
                                         </a>
