--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                         <a href="https://www.yuque.com/newreport" class="blog-button" target="_self">语雀</a>
                                     </li>			
                                      <li class="navigation__item">
-                                        <a href="https://newreport.top/webstack" class="blog-button" target="_self">webstack</a>
+                                        <a href="https://webstack.newreport.top/" class="blog-button" target="_self">webstack</a>
                                     </li>
                                 </ul>
                             </nav>
