--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>NewReport Home</title>
     <link rel="stylesheet" type="text/css" href="assets/css/vno.css">
     <link rel="stylesheet" type="text/css" href="assets/css/iconfont.css">
-    <link rel="apple-touch-icon" href="https://dn-qiniu-avatar.qbox.me/avatar/c391d18af28755c23767c34833dca4b8">
+    <link rel="apple-touch-icon" href="https://sm.ms/image/89GxydMEYDkOStg">
     <link rel="icon" href="https://cdn.jsdelivr.net/gh/newreport/home/favicon.ico">
 </head>
 
@@ -27,7 +27,7 @@
                 <div class="panel-main__content">
                     <div class="ih-item circle effect right_to_left">            
                         <a href="#" title="" class="blog-button">
-                            <div class="img"><img src="https://dn-qiniu-avatar.qbox.me/avatar/c391d18af28755c23767c34833dca4b8" alt="img" class="js-avatar iUp profilepic"></div>
+                            <div class="img"><img src="https://sm.ms/image/89GxydMEYDkOStg" alt="img" class="js-avatar iUp profilepic"></div>
                             <div class="info iUp">
                                 <div class="info-back">
                                     <h2> 
