--- a/index.html
+++ b/index.html
@@ -62,13 +62,16 @@
                                         <a href="/" class="blog-button">首页</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://newreport.top" class="blog-button" target="_self">博客</a>
+                                        <a href="https://n.vtbai.com" class="blog-button" target="_self">博客</a>
                                     </li>
                                     <li class="navigation__item">
                                         <a href="https://www.yuque.com/newreport" class="blog-button" target="_self">语雀</a>
                                     </li>			
                                      <li class="navigation__item">
-                                        <a href="https://webstack.newreport.top/" class="blog-button" target="_self">webstack</a>
+                                        <a href="https://www.zhihu.com/people/haruki-39" class="blog-button" target="_self">知乎</a>
+                                    </li>			
+                                     <li class="navigation__item">
+                                        <a href="https://w.vtbai.com/" class="blog-button" target="_self">webstack</a>
                                     </li>
                                 </ul>
                             </nav>
