--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                         <a href="/" class="blog-button">首页</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://n.vtbai.com" class="blog-button" target="_self">博客</a>
+                                        <a href="https://b.vtbai.com" class="blog-button" target="_self">博客</a>
                                     </li>
                                     <li class="navigation__item">
                                         <a href="https://www.yuque.com/newreport" class="blog-button" target="_self">语雀</a>
