--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
                                         <a href="/" class="blog-button">首页</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://b.vtbai.com" class="blog-button" target="_self">博客</a>
+                                        <a href="https://b.vtbai.com" target="_blank" class="blog-button">博客</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://www.yuque.com/newreport" class="blog-button" target="_self">语雀</a>
+                                        <a href="https://www.yuque.com/newreport" target="_blank" class="blog-button">语雀</a>
                                     </li>			
                                      <li class="navigation__item">
-                                        <a href="https://www.zhihu.com/people/haruki-39" class="blog-button" target="_self">知乎</a>
+                                        <a href="https://www.zhihu.com/people/haruki-39" target="_blank"  class="blog-button">知乎</a>
                                     </li>			
                                      <li class="navigation__item">
-                                        <a href="https://w.vtbai.com/" class="blog-button" target="_self">webstack</a>
+                                        <a href="https://w.vtbai.com/" class="blog-button" target="_blank">webstack</a>
                                     </li>
                                 </ul>
                             </nav>
