--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                         <a href="https://www.yuque.com/newreport" target="_blank" class="blog-button">语雀</a>
                                     </li>			
                                      <li class="navigation__item">
-                                        <a href="https://www.zhihu.com/people/haruki-39" target="_blank"  class="blog-button">知乎</a>
+                                        <a href="https://www.zhihu.com/people/newreport" target="_blank"  class="blog-button">知乎</a>
                                     </li>			
                                      <li class="navigation__item">
                                         <a href="https://w.vtbai.com/" class="blog-button" target="_blank">webstack</a>
