--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                         <a href="/" class="blog-button">首页</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://b.vtbai.com" target="_blank" class="blog-button">博客</a>
+                                        <a href="https://blog.newreport.com" target="_blank" class="blog-button">博客</a>
                                     </li>
                                     <li class="navigation__item">
                                         <a href="https://www.yuque.com/newreport" target="_blank" class="blog-button">语雀</a>
@@ -71,7 +71,7 @@
                                         <a href="https://www.zhihu.com/people/newreport" target="_blank"  class="blog-button">知乎</a>
                                     </li>			
                                      <li class="navigation__item">
-                                        <a href="https://w.vtbai.com/" class="blog-button" target="_blank">webstack</a>
+                                        <a href="https://w.newreport.com/" class="blog-button" target="_blank">webstack</a>
                                     </li>
                                 </ul>
                             </nav>
