--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
             }
         }
     </style>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/newreport/home/assets/js/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/newreport/home/assets/js/fetch.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/newreport/home/assets/js/main.js"></script>
+    <script type="text/javascript" src="https://fastly.jsdelivr.net/gh/newreport/home/assets/js/jquery.min.js"></script>
+    <script type="text/javascript" src="https://fastly.jsdelivr.net/gh/newreport/home/assets/js/fetch.min.js"></script>
+    <script type="text/javascript" src="https://fastly.jsdelivr.net/gh/newreport/home/assets/js/main.js"></script>
 </body>
 
 </html>
