--- a/index.html
+++ b/index.html
@@ -70,8 +70,11 @@
                                      <li class="navigation__item">
                                         <a href="https://www.zhihu.com/people/newreport" target="_blank"  class="blog-button">知乎</a>
                                     </li>			
+                                        <li class="navigation__item">
+                                        <a href="https://w.newreport.top/" class="blog-button" target="_blank">Homarr</a>
+                                    </li>
                                      <li class="navigation__item">
-                                        <a href="https://w.newreport.top/" class="blog-button" target="_blank">webstack</a>
+                                        <a href="https://w.newreport.top/" class="blog-button" target="_blank">WebStack</a>
                                     </li>
                                 </ul>
                             </nav>
