--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                         <a href="https://www.zhihu.com/people/newreport" target="_blank"  class="blog-button">知乎</a>
                                     </li>			
                                         <li class="navigation__item">
-                                        <a href="https://homarr.vtbai.com/" class="blog-button" target="_blank">Homarr</a>
+                                        <a href="https://homarr.vtbai.com/main" clinass="blog-button" target="_blank">Homarr</a>
                                     </li>
                                      <li class="navigation__item">
                                         <a href="https://w.newreport.top/" class="blog-button" target="_blank">WebStack</a>
