--- a/index.html
+++ b/index.html
@@ -62,11 +62,8 @@
                                         <a href="/" class="blog-button">首页</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://blog.newreport.top" target="_blank" class="blog-button">博客</a>
+                                        <a href="https://newreport.linkey.top" target="_blank" class="blog-button">博客</a>
                                     </li>
-                                    <li class="navigation__item">
-                                        <a href="https://www.yuque.com/newreport" target="_blank" class="blog-button">语雀</a>
-                                    </li>			
                                      <li class="navigation__item">
                                         <a href="https://www.zhihu.com/people/newreport" target="_blank"  class="blog-button">知乎</a>
                                 </ul>
@@ -82,7 +79,7 @@
                                         </a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://blog.csdn.net/weixin_45093704" title="CSDN" target="_blank">
+                                        <a href="https://a.com" title="CSDN" target="_blank">
                                             <i class="social iconfont icon-cnblogs"></i>
                                             <span class="label">CSDN</span>
                                         </a>
